--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://mgJin.github.io/practice_ReactJS_webService"
+  "homepage": "https://mgJin.github.io/practice_ReactJS_webService"
 }
